src/css/style.css
a {
    text-decoration: none;
    color: #fff;
}

a:hover {
    text-decoration: none;
    color: #fff;
}

.exodia-container {
    display: flex;
    flex-direction: row;
    width: 100%;
    min-height: 100vh;
}

.container-1 {
    position: fixed;
    width: 30vw;
    min-height: 100vh;
    text-align: center;
}

.container-2 {
    display: inline-flex;
    background-color:brown;
    width: 70vw;
    padding: 20px;
    flex-wrap: wrap;
    margin-left: 30vw;
}

#title {
    flex-basis: 100%;
    font-size: 72px;
    font-weight: bold;
}

.box {
    flex: 1 1 45%;
    padding: 20px;
    margin: 25px;
    background-color: #202020;
    border-radius: 7.5px;
    align-self: center;
}

.box:hover {
    transform: scale(1.025);
    transition: transform 0.5s;
}

.section-title {
    font-size: 36px;
    font-weight: bold;
}

.about-section {
    font-size: 30px;
}

.bottom-section {
    font-size: 15px;
    font-style: italic;
}

#github-avatar {
    background: url(https://avatars3.githubusercontent.com/u/39206588?s=460&u=34894adba6753fe0d7473d5abef3fafeb286389d&v=4)
        center;
    background-repeat: no-repeat;
    max-width: 420px;
    height: 420px;
}

#username {
    display: block;
    font-size: 40px;
}
#username a:hover {
    text-decoration: underline;
}

.socials {
    font-size: 28px;
    display: inline-block;
}

